@@ -110,13 +110,23 @@ CBoostedTreeImpl::CLeafNodeStatistics::CLeafNodeStatistics(std::size_t id,
         m_Gradients[i].resize(numberSplits);
         m_Curvatures[i].resize(numberSplits);
         for (std::size_t j = 0; j < numberSplits; ++j) {
-            m_Gradients[i][j] = parent.m_Gradients[i][j] - sibling.m_Gradients[i][j];
+            // Numeric errors mean that it's possible the sum curvature for a candidate split is identically zero while
+            // the gradient is epsilon. This can cause the node gain to appear infinite (when there is no weight
+            // regularisation) which in turns causes problems initialising the region we search for optimal
+            // hyperparameter values. Since none of our loss functions should have curvature identically equal to zero,
+            // we can safely force the gradient to be zero if detect that the curvature is zero.
             m_Curvatures[i][j] = parent.m_Curvatures[i][j] - sibling.m_Curvatures[i][j];
+            m_Gradients[i][j] = m_Curvatures[i][j] == 0.0
+                                    ? 0.0
+                                    : parent.m_Gradients[i][j] -
+                                          sibling.m_Gradients[i][j];
         }
-        m_MissingGradients[i] = parent.m_MissingGradients[i] -
-                                sibling.m_MissingGradients[i];
         m_MissingCurvatures[i] = parent.m_MissingCurvatures[i] -
                                  sibling.m_MissingCurvatures[i];
+        m_MissingGradients[i] = m_MissingCurvatures[i] == 0.0
+                                    ? 0.0
+                                    : parent.m_MissingGradients[i] -
+                                          sibling.m_MissingGradients[i];
     }
 
     LOG_TRACE(<< "gradients = " << core::CContainerPrinter::print(m_Gradients));
